--- a/treemap/index.html
+++ b/treemap/index.html
@@ -1,5 +1,11 @@
+<Doctype html>
+  <html lang='en-us'>
+    <head>
+    <meta charset='utf-8'>
+    <title> Movie Treemap visualization</title> 
 <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-
+    </head>
+    <body>
 <div class="main">
   <div class="title" id="title">Movie Sales</div>
   <span class="description" id="description">Top sold movies</span>
@@ -7,3 +13,5 @@
     <div class="svgcont"></div>
   </div>
 </div>
+    </body>
+  </html>
