--- a/treemap/index.html
+++ b/treemap/index.html
@@ -2,6 +2,8 @@
   <html lang='en-us'>
     <head>
     <meta charset='utf-8'>
+      <link rel='stylesheet' href='./style.css'>
+      <script src ='./script.babel'></script>
     <title> Movie Treemap visualization</title> 
 <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     </head>
