--- a/treemap/index.html
+++ b/treemap/index.html
@@ -1,19 +1,24 @@
-<Doctype html>
-  <html lang='en-us'>
-    <head>
-    <meta charset='utf-8'>
-      <link rel='stylesheet' href='./style.css'>
-      <script src ='./script.babel'></script>
-    <title> Movie Treemap visualization</title> 
-<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    </head>
-    <body>
-<div class="main">
-  <div class="title" id="title">Movie Sales</div>
-  <span class="description" id="description">Top sold movies</span>
-  <div class="container">
-    <div class="svgcont"></div>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title> Movie Treemap visualization</title>
+  <link rel='stylesheet' href='./style.css'>
+
+</head>
+
+<body>
+  <div class="main">
+    <div class="title" id="title">Movie Sales</div>
+    <span class="description" id="description">Top sold movies</span>
+    <div class="container">
+      <div class="svgcont"></div>
+    </div>
   </div>
-</div>
-    </body>
-  </html>
+</body>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.2/d3.min.js"></script>
+<!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
+<script src='script.babel'></script>
+</html>
